# libnova2

./: .clang-format  .config  .gitignore  .version  AGENTS.md  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Kconfig  Makefile.am  README.md  config.h.in  configure.ac  git-version-gen  libnova.pc  libnova.pc.in  libnova2.pc  libnova2.pc.in  libnova2.proj
.agents/workflows/: add_feature.md  c_code_changes.md  debug_c_code.md  doxygen_updates.md  fix_bug.md  markdown_changes.md  python_code_changes.md  submit_pr.md
.github/workflows/: ci.yml
cmake/: toolchain-xtensa-sample.cmake
debian/: changelog  control  libnova2-dev.dirs  rules
doc/: doxyfile.in
examples/: CMakeLists.txt  asteroid.c  comet.c  lunar.c  mars.c  sun.c  transforms.c
lntest/: CMakeLists.txt  libnova2_config.c  libnova_test_exec  main_test.c  missing_functions.txt  public_functions.txt  test.c  test_aber_prec_nut.c  test_aberration.c  test_airmass.c  test_angular.c  test_apparent_position.c  test_asteroid.c  test_constellation.c  test_dynamical.c  test_earth.c  test_elliptic_motion.c  test_elliptic_parabolic.c  test_heliocentric.c  test_helpers.c  test_helpers.h  test_hyperbolic_motion.c  test_julian.c  test_jupiter.c  test_lunar.c  test_mars.c  test_mercury.c  test_neptune.c  test_nutation.c  test_packages.sh  test_parabolic_motion.c  test_parallax.c  test_planetary.c  test_pluto.c  test_precession.c  test_rst.c  test_saturn.c  test_sidereal.c  test_solar.c  test_transform.c  (+5 more)
python/: generate_bindings.py  run_tests.sh  setup.py  test.py  test2.py
python/libnova2/: __init__.py  libnova2.py
python/libnova2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_dynamical.py  test_julian.py  test_mars.py  test_nutation.py  test_precession.py  test_solar.py
src/: CMakeLists.txt  Kconfig  aberration.c  airmass.c  angular_separation.c  apparent_position.c  asteroid.c  comet.c  constellation.c  dynamical_time.c  earth.c  elliptic_motion.c  heliocentric_time.c  hyperbolic_motion.c  julian_day.c  jupiter.c  lunar-priv.h  lunar.c  mars.c  mercury.c  misc.c  neptune.c  nutation.c  parabolic_motion.c  parallax.c  pluto.c  precession.c  proper_motion.c  refraction.c  rise_set.c  saturn.c  sidereal_time.c  solar.c  transform.c  uranus.c  utility.c  venus.c  vsop87.c
src/elp/: CMakeLists.txt  elp.h  elp1.c  elp10.c  elp11.c  elp12.c  elp13.c  elp14.c  elp15.c  elp16.c  elp17.c  elp18.c  elp19.c  elp2.c  elp20.c  elp21.c  elp22.c  elp23.c  elp24.c  elp25.c  elp26.c  elp27.c  elp28.c  elp29.c  elp3.c  elp30.c  elp31.c  elp32.c  elp33.c  elp34.c  elp35.c  elp36.c  elp4.c  elp5.c  elp6.c  elp7.c  elp8.c  elp9.c
src/libnova/: aberration.h  airmass.h  angular_separation.h  apparent_position.h  asteroid.h  comet.h  constellation.h  dynamical_time.h  earth.h  elliptic_motion.h  heliocentric_time.h  hyperbolic_motion.h  julian_day.h  jupiter.h  libnova.h  ln_types.h  lunar.h  mars.h  mercury.h  neptune.h  nutation.h  parabolic_motion.h  parallax.h  pluto.h  precession.h  proper_motion.h  refraction.h  rise_set.h  saturn.h  sidereal_time.h  solar.h  transform.h  uranus.h  utility.h  venus.h  vsop87.h
src/libnova2/: aberration.h  airmass.h  angular_separation.h  apparent_position.h  asteroid.h  comet.h  constellation.h  dynamical_time.h  earth.h  elliptic_motion.h  heliocentric_time.h  hyperbolic_motion.h  julian_day.h  jupiter.h  libnova2.h  ln_types.h  lunar.h  mars.h  mercury.h  neptune.h  nutation.h  parabolic_motion.h  parallax.h  pluto.h  precession.h  proper_motion.h  refraction.h  rise_set.h  saturn.h  sidereal_time.h  solar.h  transform.h  uranus.h  utility.h  venus.h  vsop87.h
tools/: elp82.c  kconfig.cmake
